Arrumei a cor da navegação!

--- a/login.css
+++ b/login.css
@@ -43,6 +43,7 @@
     padding: 10px;
     border-radius: 10px;
     border: 2px solid #32b9cd;
+    text-align: center;
 }
 
 .caixa-formulario button {
